--- a/Public/index.html
+++ b/Public/index.html
@@ -131,13 +131,20 @@
     </div>
 
     <script>
+        const getBaseUrl = () => {
+            if (window.location.hostname === "localhost" || window.location.hostname === "127.0.0.1" || window.location.protocol === "file:") {
+                return "http://localhost:3000";
+            }
+            return ""; // Production (Vercel)
+        };
+
         async function login() {
             const username = document.getElementById("username").value;
             const password = document.getElementById("password").value;
             const status = document.getElementById("login-status");
 
             try {
-                const res = await fetch("http://localhost:3000/login", {
+                const res = await fetch(`${getBaseUrl()}/login`, {
                     method: "POST",
                     headers: { "Content-Type": "application/json" },
                     body: JSON.stringify({ username, password })
@@ -191,7 +198,7 @@
             showStatus("⏳ Sending emails. Please wait...", "info");
 
             try {
-                const url = "http://localhost:3000/send";
+                const url = `${getBaseUrl()}/send`;
                 console.log("Fetching from:", url);
                 const res = await fetch(url, {
                     method: "POST",
